bugs fixed
Fixed about us, changed the design of Research Highlights, added scrollbar, with matching theme

--- a/en/style.css
+++ b/en/style.css
@@ -19,6 +19,36 @@
   color: #ccd7e1;
 }
 
+
+html::-webkit-scrollbar{
+  width: 5px;
+  z-index: 1;
+}
+
+html::-moz-scrollbar{
+  width: 5px;
+  z-index: 1;
+}
+
+
+
+html::-webkit-scrollbar-thumb:hover {
+  width: 6px;
+}
+ 
+html::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+html::-webkit-scrollbar-thumb {
+  /*background-color: #1c3a4b;*/
+  outline: 1px solid #1f004a;
+  border-radius: 10px;
+
+}
+
+
+
 html
 {
   margin: 0;
@@ -1130,12 +1160,12 @@ body{
   .reseachHighLights
   {
     height: auto;
-    background:#001742;
+    background: #f3f3f3;
   }
   .reseachHighLights_sub h2
   {
-    color: #ffffff;
-    text-shadow:  0px 0px 2px #ffffff, 0 0 2px #00000000;
+    color: #262626;
+    text-shadow: 2px 0px 4px #646464, 0px 0px 0px #000000;
     font-family: 'varela round',sans-serif;
     text-align: center;
     font-size: 1.9em;
@@ -1162,13 +1192,13 @@ body{
   .aboutBackground
   {
     height: 100%;
-    background: #ffffff54;
+    background: #ffffffb5;
     backdrop-filter: blur(4px);
   }
   .aboutSub h2
   {
-    color: #ffffff;
-    text-shadow:  0px 0px 2px #ffffff, 0 0 2px #00000000;
+    color: #606060;
+    text-shadow: 1px 0px 2px #000000, 0px 0px 2px #3057a0e0;
     font-family: 'varela round',sans-serif;
     text-align: center;
     font-size: 1.9em;
@@ -1187,6 +1217,7 @@ body{
   .aboutContent p
   {
     color: #000;
+    text-shadow: 1px 0px 3px #b1b1b1;
     line-height: 2em;
     font-size: 20px;
     font-family: 'varela round',sans-serif;
